# tickets_management

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.prod.txt  requirements.txt  ticket_mgmt.env
app/: database.py  main.py  settings.py
app/kernels/: ticket.py
app/models/: ticket.py
app/routers/: default.py  ticket.py
app/schemas/: ticket.py
tests/: conftest.py  test_main.py  test_ticket.py
