[project]
name = "tickets-management-backend"
version = "0.1.0"
description = "A simple FastAPI app to manage tickets"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "black>=25.1.0",
    "click==8.2.1",
    "fastapi==0.115.12",
    "h11==0.16.0",
    "httptools==0.6.4",
    "idna==3.10",
    "iniconfig==2.1.0",
    "packaging==25.0",
    "pluggy==1.6.0",
    "pydantic==2.11.5",
    "pydantic-core==2.33.2",
    "pytest==8.3.5",
    "python-decouple>=3.8",
    "python-dotenv==1.1.0",
    "pyyaml==6.0.2",
    "sniffio==1.3.1",
    "sqlmodel>=0.0.24",
    "starlette==0.46.2",
    "typing-extensions==4.13.2",
    "typing-inspection==0.4.1",
    "uvicorn==0.34.2",
    "uvloop==0.21.0",
    "watchfiles==1.0.5",
    "websockets==15.0.1",
]
